--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,11 @@
-site_name: obsidian-mkdocs template
+site_name: Xentis Archives
 
 theme:
     name: 'material'
     palette:
+      scheme: slate
+      primary: black
+      accent: blue
 
     # Light mode
     - media: "(prefers-color-scheme: light)"
